; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_da9052_tsi.c_da9052_ts_adc_toggle.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_da9052_tsi.c_da9052_ts_adc_toggle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.da9052_tsi = type { i32, i32 }

@DA9052_TSI_CONT_A_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.da9052_tsi*, i32)* @da9052_ts_adc_toggle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @da9052_ts_adc_toggle(%struct.da9052_tsi* %0, i32 %1) #0 {
  %3 = alloca %struct.da9052_tsi*, align 8
  %4 = alloca i32, align 4
  store %struct.da9052_tsi* %0, %struct.da9052_tsi** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.da9052_tsi*, %struct.da9052_tsi** %3, align 8
  %6 = getelementptr inbounds %struct.da9052_tsi, %struct.da9052_tsi* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @DA9052_TSI_CONT_A_REG, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @da9052_reg_update(i32 %7, i32 %8, i32 1, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.da9052_tsi*, %struct.da9052_tsi** %3, align 8
  %13 = getelementptr inbounds %struct.da9052_tsi, %struct.da9052_tsi* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  ret void
}

declare dso_local i32 @da9052_reg_update(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
